--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -52,3 +52,8 @@ logging.level.com.company.calendar=DEBUG
 # 其他配置
 spring.application.name=Calendar System
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+# 跨平台文件系統處理配置
+# 使用Java系統提供的文件分隔符，不需要特定OS配置
+app.file.separator=${file.separator}
+app.backup.dir=./database_backups
